--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -40,13 +40,13 @@
         />
 
     <Button
+        android:id="@+id/insert"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_below="@id/category"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:background="@drawable/button_corner"
-        android:onClick="products"
         android:text="@string/btn4" />
     <!-- android:textAllCaps="false"-->
 
