--- a/app/src/main/res/layout/activity_delivery_report.xml
+++ b/app/src/main/res/layout/activity_delivery_report.xml
@@ -8,7 +8,7 @@
     tools:context=".DeliveryReport">
 
     <EditText
-        android:id="@+id/editText11"
+        android:id="@+id/Delivery_T_txt"
         android:layout_width="wrap_content"
         android:textStyle="bold"
         android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
         app:layout_constraintVertical_bias="0.74" />
 
     <EditText
-        android:id="@+id/editText10"
+        android:id="@+id/Address_txt"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
         app:layout_constraintVertical_bias="0.581" />
 
     <EditText
-        android:id="@+id/editText9"
+        android:id="@+id/City_txt"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -139,7 +139,7 @@
         app:layout_constraintVertical_bias="0.44" />
 
     <EditText
-        android:id="@+id/editText8"
+        android:id="@+id/Order_Id_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -152,7 +152,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/Submit_btn"
         android:layout_width="220dp"
         android:layout_height="51dp"
         android:layout_marginStart="8dp"
@@ -162,10 +162,9 @@
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.465"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.917"
 
-        />
+        app:layout_constraintVertical_bias="0.908" />
 </androidx.constraintlayout.widget.ConstraintLayout>
