--- a/app/src/main/res/layout/activity_delivery_report.xml
+++ b/app/src/main/res/layout/activity_delivery_report.xml
@@ -153,18 +153,30 @@
 
     <Button
         android:id="@+id/Submit_btn"
-        android:layout_width="220dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="150dp"
+        android:layout_height="44dp"
+
         android:background="@drawable/deliveybutton"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
+        app:layout_constraintHorizontal_bias="0.122"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintVertical_bias="0.908" />
+        app:layout_constraintVertical_bias="0.912" />
+
+    <Button
+        android:id="@+id/Delete_btn"
+
+        android:layout_width="147dp"
+        android:layout_height="46dp"
+        android:background="@drawable/button_corner"
+        android:text="DELETE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.806"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
 </androidx.constraintlayout.widget.ConstraintLayout>
