--- a/app/src/main/res/layout/activity_remove_driver.xml
+++ b/app/src/main/res/layout/activity_remove_driver.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="45dp"
                 android:layout_below="@+id/reSearch"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dpdp"
                 android:background="@drawable/addbutton"
                 android:text="@string/btn4"
                 android:textColor="#fff"
