--- a/app/src/main/res/layout/activity_remove__driver.xml
+++ b/app/src/main/res/layout/activity_remove__driver.xml
@@ -163,6 +163,12 @@
                 android:textColor="#fff"
                 android:textSize="23dp" />
 
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Button" />
+
 
         </RelativeLayout>
 
