--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -1,251 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".AddToCart">
 
-
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_weight=".5"
+        android:layout_height="180dp"
         android:background="@drawable/back"
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:visibility="visible"
+        tools:ignore="MissingConstraints" />
+
+
+    <TextView
+        android:id="@+id/jaja"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorAccents"
+        android:text="Checkout"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:visibility="visible" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context=".AddToCart">
+        android:paddingTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="98dp"/>
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="116dp"
-            android:layout_height="55dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="160dp"
-            android:layout_marginBottom="100dp"
-            android:text="@string/textView7"
-            android:textColor="@color/colorPrimaryDark" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/removebutton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="260dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="85dp"
-            android:text="@string/button4" />
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="397dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="16dp">
+
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="381dp"
+        android:layout_height="72dp"
+        android:background="@color/background"
+        android:orientation="horizontal"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="134dp"
+        tools:ignore="MissingConstraints">
+
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="88dp"
-            android:layout_height="77dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="290dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/cusadd" />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:background="@drawable/china_cabbage"></ImageView>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_weight=".5"
-        android:background="@drawable/back"
-        android:orientation="vertical"
-        tools:context=".AddToCart">
 
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="116dp"
-            android:layout_height="55dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="160dp"
-            android:layout_marginBottom="85dp"
-            android:text="@string/textView9"
-            android:textColor="@color/colorPrimaryDark" />
+            <TextView
+                android:id="@+id/itemitem"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="@color/background"
+                android:text="Checkout" />
+
+            <TextView
+                android:id="@+id/subitemitem"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="@color/background"
+                android:text="200" />
+
+        </LinearLayout>
 
         <Button
-            android:id="@+id/button8"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/removebutton"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="260dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="75dp"
-            android:text="@string/button8" />
+            android:layout_width="82dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:text="Remove"
+            android:textColor="@color/black"
+            android:textSize="11sp"></Button>
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="88dp"
-            android:layout_height="77dp"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="290dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/cusadd" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_weight=".5"
-        android:background="@drawable/back"
-        android:orientation="vertical"
-        tools:context=".AddToCart">
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="116dp"
-            android:layout_height="55dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="160dp"
-            android:layout_marginBottom="84dp"
-            android:text="@string/textView11"
-            android:textColor="@color/colorPrimaryDark" />
-
-        <Button
-            android:id="@+id/button9"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:background="@drawable/removebutton"
-            android:layout_marginStart="260dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="75dp"
-            android:text="@string/button9" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="88dp"
-            android:layout_height="77dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="290dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/cusadd" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-
-        android:layout_marginTop="10dp"
-        android:layout_weight=".5"
-        android:background="@drawable/back"
-        android:orientation="vertical"
-        tools:context=".AddToCart">
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="116dp"
-            android:layout_height="55dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="160dp"
-            android:layout_marginBottom="87dp"
-            android:text="@string/textView13"
-            android:textColor="@color/colorPrimaryDark" />
-
-        <Button
-            android:id="@+id/button10"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="260dp"
-            android:background="@drawable/removebutton"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="75dp"
-            android:text="@string/button10" />
-
-        <Button
-            android:id="@+id/button11"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="114dp"
-            android:layout_marginTop="116dp"
-            android:background="@drawable/removebutton"
-            android:layout_marginEnd="95dp"
-            android:layout_marginBottom="-1dp"
-            android:text="@string/button11" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="88dp"
-            android:layout_height="77dp"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="290dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/cusadd" />
+    </LinearLayout>
 
 
-    </RelativeLayout>
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
