--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -271,11 +271,11 @@
                                     android:textSize="18sp" />
 
                                 <Button
+                                    android:id="@+id/buttonPanel5"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:id="@+id/buttonPanel5"
                                     android:background="@android:color/transparent"
-                                    />
+                                    android:onClick="searchProduct" />
 
                             </RelativeLayout>
                         </androidx.cardview.widget.CardView>
