--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -7,6 +7,17 @@
     tools:context=".new_product">
 
 
+    <ImageView
+        android:id="@+id/select_product_image"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
+        android:cropToPadding="false"
+        android:scaleType="centerCrop"
+        android:src="@drawable/cam"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        />
+
     <EditText
         android:id="@+id/ItemID"
         android:layout_width="300dp"
@@ -14,7 +25,8 @@
         android:background="@drawable/edit_corner"
         android:paddingLeft="10dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_below="@+id/select_product_image"
+        android:layout_marginTop="50dp"
         android:hint="@string/hint4"
         />
     <EditText
@@ -57,7 +69,7 @@
         android:layout_height="40dp"
         android:layout_below="@id/category"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/button_corner"
         android:onClick="Dashboard"
         android:text="@string/btn4" />
